removed footer. fixed overflow issue - was cutting off page

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,5 @@
 /*profile layout stuff*/
-#rendered-view{position: relative;width: 100%;overflow: hidden;}
+#rendered-view{position: relative;width: 100%;}
 /*nav stuff*/
 nav{
    border-radius: 0!important;
